# dbstudio

./: .editorconfig  .gitignore  .prettierignore  Cargo.toml  INSTALL.md  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json
.github/workflows/: release.yml
apps/desktop/: package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: commands.rs  lib.rs  main.rs  state.rs
apps/web/: next.config.mjs  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/connections/: page.tsx
apps/web/app/connections/[id]/: page.tsx
apps/web/app/connections/[id]/edit/: page.tsx
apps/web/app/connections/[id]/history/: page.tsx
apps/web/app/connections/[id]/schema/: page.tsx
apps/web/app/connections/[id]/snippets/: page.tsx
apps/web/app/connections/[id]/sql/: page.tsx
apps/web/app/connections/new/: page.tsx
apps/web/app/data-diff/: page.tsx
apps/web/app/diff/: page.tsx
apps/web/app/edit/: page.tsx
apps/web/app/history/: page.tsx
apps/web/app/mongo/: page.tsx
apps/web/app/redis/: page.tsx
apps/web/app/schema/: page.tsx
apps/web/app/snippets/: page.tsx
apps/web/app/sql/: page.tsx
apps/web/components/: AppShell.tsx  CommandPalette.tsx  ConnectionForm.tsx  DdlDialog.tsx  KeyboardShortcutsDialog.tsx  QueryHistoryPanel.tsx  ResultTable.tsx  SnippetsPanel.tsx  SqlEditor.tsx  TableDetailsDrawer.tsx
apps/web/components/ui/: button.tsx  card.tsx  combobox.tsx  dialog.tsx  dropdown-menu.tsx  input.tsx  label.tsx  resizable.tsx  select.tsx  tabs.tsx
apps/web/lib/: api.ts  buildDdl.ts  createTableDdl.ts  dataDiff.ts  dataDiffSql.ts  engineDataTypes.ts  exporters.ts  formatSql.ts  openTable.ts  runtime.ts  sqlCompletion.ts  sqlLiteral.ts  theme.ts  types.ts
apps/web/store/: connections.ts  gridPrefs.ts  sqlTabs.ts
services/core/: Cargo.toml
services/core/src/: connection.rs  driver.rs  error.rs  lib.rs  query.rs  schema.rs  secrets.rs  ssh_tunnel.rs
services/drivers/mysql/: Cargo.toml
services/drivers/mysql/src/: decode.rs  introspect.rs  lib.rs  map_error.rs  split.rs
services/drivers/postgres/: Cargo.toml
services/drivers/postgres/src/: decode.rs  introspect.rs  lib.rs  map_error.rs  split.rs
services/drivers/sqlite/: Cargo.toml
services/drivers/sqlite/src/: decode.rs  introspect.rs  lib.rs  map_error.rs  split.rs
services/server/: Cargo.toml
services/server/src/: main.rs  routes.rs
