[workspace]
resolver = "2"
members = [
  "services/core",
  "services/server",
  "services/drivers/postgres",
  "services/drivers/mysql",
  "services/drivers/sqlite",
  "apps/desktop/src-tauri",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
rust-version = "1.80"
license = "UNLICENSED"
authors = ["dbstudio contributors"]
repository = "https://github.com/dbstudio/dbstudio"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }

# Web / HTTP
axum = { version = "0.7", features = ["macros", "ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Errors / logging
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Database
sqlx = { version = "0.8", default-features = false, features = [
  "runtime-tokio-rustls",
  "macros",
  "postgres",
  "mysql",
  "sqlite",
  "chrono",
  "uuid",
  "json",
  "bigdecimal",
] }
bigdecimal = "0.4"

# SSH for tunneling
russh = "0.46"
russh-keys = "0.46"

# Crypto for local credential storage
chacha20poly1305 = "0.10"
argon2 = "0.5"
rand = "0.8"
base64 = "0.22"

# Utilities
uuid = { version = "1", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
url = "2"
async-trait = "0.1"
dashmap = "6"

# Tauri
tauri = { version = "2", features = [] }
tauri-build = { version = "2" }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
