[package]
name = "dbstudio-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Core domain types, driver trait, and orchestration for dbstudio."

[lib]
path = "src/lib.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
url = { workspace = true }
async-trait = { workspace = true }
chacha20poly1305 = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
russh = { workspace = true }
russh-keys = { workspace = true }
dashmap = { workspace = true }

[dev-dependencies]
tempfile = "3"
