[package]
name = "dbstudio-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Axum HTTP server wrapping dbstudio-core for cloud (SaaS) deployment."

[[bin]]
name = "dbstudio-server"
path = "src/main.rs"

[dependencies]
dbstudio-core = { path = "../core" }
dbstudio-driver-postgres = { path = "../drivers/postgres" }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
