[package]
name = "dbstudio-desktop"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "dbstudio Tauri 2 desktop shell."

[lib]
name = "dbstudio_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
dbstudio-core = { path = "../../../services/core" }
dbstudio-driver-postgres = { path = "../../../services/drivers/postgres" }
dbstudio-driver-mysql = { path = "../../../services/drivers/mysql" }
dbstudio-driver-sqlite = { path = "../../../services/drivers/sqlite" }
tauri = { workspace = true }
tauri-plugin-shell = { workspace = true }
tauri-plugin-updater = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
dashmap = { workspace = true }
